--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -282,7 +282,7 @@ UnitScreen As screen:
                     Y: =imgStep1US.Y+imgStep1US.Height+20
                     ZIndex: =15
 
-                lblStep5CL_1 As label:
+                lblStep5US As label:
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
