--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -269,7 +269,7 @@ UnitScreen As screen:
                     Y: =imgStep1US.Y+imgStep1US.Height+20
                     ZIndex: =14
 
-                lblSteo4CL_1 As label:
+                lblStep4US As label:
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
