--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -243,7 +243,7 @@ UnitScreen As screen:
                     Y: =imgStep1US.Y+imgStep1US.Height+20
                     ZIndex: =12
 
-                lblStep2CL_1 As label:
+                lblStep2US As label:
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
