--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -228,7 +228,7 @@ UnitScreen As screen:
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =11
 
-                lblStep1CL_1 As label:
+                lblStep1US As label:
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
