--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -644,7 +644,7 @@ UnitScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =5
 
-                Image3_2 As image:
+                imgLogoUS As image:
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(255, 255, 255, 1)
                     Height: =Parent.Height
