--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -941,7 +941,7 @@ ScopeScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-            lblPopopContracterrorNextSS As label:
+            lblPopopContracterrorSS As label:
                 Align: =Align.Center
                 Font: =Font.Arial
                 FontWeight: =FontWeight.Semibold
