--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -653,7 +653,7 @@ UnitScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-    PopopContracterrorNextUS As groupContainer.manualLayoutContainer:
+    PopopMandatoryUS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Visible: =VarNotification
