--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -811,14 +811,14 @@ ScopeScreen As screen:
                 Width: =Parent.Width/5
                 ZIndex: =3
 
-    grpMenuDS_1 As group:
+    grpMenuSS As group:
         Height: =5
         Width: =5
         X: =40
         Y: =80
         ZIndex: =4
 
-        ctnBackgroundMenuDS_2 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuSS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
@@ -826,11 +826,11 @@ ScopeScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
-        "glryMenuBarDS_1 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuBarSS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.08*(CountRows(glryMenuBarDS_1.AllItems)*(glryMenuBarDS_1.TemplateHeight))
+            Height: =1.08*(CountRows(glryMenuBarSS.AllItems)*(glryMenuBarSS.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -842,14 +842,14 @@ ScopeScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-            ctnMenuDS_1 As groupContainer.manualLayoutContainer:
+            ctnMenuSS As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
                 Width: =Parent.Width/1.02
                 ZIndex: =8
 
-                lblMenuDS_1 As label:
+                lblMenuSS As label:
                     AutoHeight: =true
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =24
@@ -859,12 +859,12 @@ ScopeScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
-                    Width: =Parent.Width-iconMenuDS_1.Width-lineIndicatorDS_1.Width
-                    X: =iconMenuDS_1.Width+iconMenuDS_1.X
+                    Width: =Parent.Width-iconMenuSS.Width-lineIndicatorSS.Width
+                    X: =iconMenuSS.Width+iconMenuSS.X
                     Y: =30
                     ZIndex: =1
 
-                iconMenuDS_1 As icon.Add:
+                iconMenuSS As icon.Add:
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
@@ -873,7 +873,7 @@ ScopeScreen As screen:
                     Y: =30
                     ZIndex: =3
 
-                btnMensuDS_1 As button:
+                btnMenuSS As button:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =80
                     HoverFill: =
@@ -886,7 +886,7 @@ ScopeScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =4
 
-                lineIndicatorDS_1 As rectangle:
+                lineIndicatorSS As rectangle:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =5
                     Fill: =RGBA(255, 0, 0, 1)
