--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -222,7 +222,7 @@ ScopeScreen As screen:
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
-                    X: =Image1_14.X+Image1_14.Width
+                    X: =imgStep4SS.X+imgStep4SS.Width
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =11
 
@@ -276,7 +276,7 @@ ScopeScreen As screen:
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                     Text: ="Step 4"
                     Width: =Parent.Width/5
-                    X: =Image1_14.X-Image1_14.Width/3
+                    X: =imgStep4SS.X-imgStep4SS.Width/3
                     Y: =Image1_10.Y+Image1_10.Height+20
                     ZIndex: =15
 
@@ -347,7 +347,7 @@ ScopeScreen As screen:
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =22
 
-                Image1_14 As image:
+                imgStep4SS As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =1
                     DisabledBorderColor: =RGBA(202, 202, 202, 1)
