--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -178,12 +178,12 @@ ScopeScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
-                    Height: =Image1_10.Height/4
+                    Height: =imgStep1SS.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
-                    X: =Image1_10.X+Image1_10.Width
+                    X: =imgStep1SS.X+imgStep1SS.Width
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =8
 
@@ -191,12 +191,12 @@ ScopeScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
-                    Height: =Image1_10.Height/4
+                    Height: =imgStep1SS.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
                         If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/8,Parent.Width/6)
-                    X: =Image1_12.X+Image1_12.Width
+                    X: =imgStep2SS.X+imgStep2SS.Width
                     Y: =If(Parent.Height>Parent.Width,(Parent.Height-Self.Height)/5.5,(Parent.Height-Self.Height)/3.2)
                     ZIndex: =9
 
@@ -204,7 +204,7 @@ ScopeScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
-                    Height: =Image1_10.Height/4
+                    Height: =imgStep1SS.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
@@ -217,7 +217,7 @@ ScopeScreen As screen:
                     Color: =RGBA(202, 202, 202, 1)
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(202, 202, 202, 1)
-                    Height: =Image1_10.Height/4
+                    Height: =imgStep1SS.Height/4
                     Icon: =Icon.HorizontalLine
                     Width: |-
                         =//If(Parent.Width<440,40,Parent.Width<500,55,70)
@@ -237,8 +237,8 @@ ScopeScreen As screen:
                     Width: =Parent.Width/5
                     X: |-
                         =//If(Parent.Width<378,Parent.Width/8,Parent.Width<500,Parent.Width/7,Parent.Width/4)
-                        Image1_10.X-Image1_10.Width/3
-                    Y: =Image1_10.Y+Image1_10.Height+20
+                        imgStep1SS.X-imgStep1SS.Width/3
+                    Y: =imgStep1SS.Y+imgStep1SS.Height+20
                     ZIndex: =12
 
                 lblStep2CL_2 As label:
@@ -250,8 +250,8 @@ ScopeScreen As screen:
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                     Text: ="Step 2"
                     Width: =Parent.Width/5
-                    X: =Image1_12.X-Image1_12.Width/3
-                    Y: =Image1_10.Y+Image1_10.Height+20
+                    X: =imgStep2SS.X-imgStep2SS.Width/3
+                    Y: =imgStep1SS.Y+imgStep1SS.Height+20
                     ZIndex: =13
 
                 lblStep3CL_2 As label:
@@ -264,7 +264,7 @@ ScopeScreen As screen:
                     Text: ="Step 3"
                     Width: =Parent.Width/5
                     X: =imgStep3SS.X-imgStep3SS.Width/3
-                    Y: =Image1_10.Y+Image1_10.Height+20
+                    Y: =imgStep1SS.Y+imgStep1SS.Height+20
                     ZIndex: =14
 
                 lblSteo4CL_2 As label:
@@ -277,7 +277,7 @@ ScopeScreen As screen:
                     Text: ="Step 4"
                     Width: =Parent.Width/5
                     X: =imgStep4SS.X-imgStep4SS.Width/3
-                    Y: =Image1_10.Y+Image1_10.Height+20
+                    Y: =imgStep1SS.Y+imgStep1SS.Height+20
                     ZIndex: =15
 
                 lblStep5CL_2 As label:
@@ -290,10 +290,10 @@ ScopeScreen As screen:
                     Text: ="Step 5"
                     Width: =Parent.Width/5
                     X: =imgStep5SS.X-imgStep5SS.Width/3
-                    Y: =Image1_10.Y+Image1_10.Height+20
+                    Y: =imgStep1SS.Y+imgStep1SS.Height+20
                     ZIndex: =16
 
-                Image1_10 As image:
+                imgStep1SS As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =1
                     DisabledBorderColor: =RGBA(202, 202, 202, 1)
@@ -311,7 +311,7 @@ ScopeScreen As screen:
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =20
 
-                Image1_12 As image:
+                imgStep2SS As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
                     BorderThickness: =1
                     DisabledBorderColor: =RGBA(202, 202, 202, 1)
