--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -280,7 +280,7 @@ ScopeScreen As screen:
                     Y: =imgStep1SS.Y+imgStep1SS.Height+20
                     ZIndex: =15
 
-                lblStep5CL_2 As label:
+                lblStep5SS As label:
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
