--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -733,7 +733,7 @@ ScopeScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =5
 
-                Image3_3 As image:
+                imgLogoSS As image:
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(255, 255, 255, 1)
                     Height: =Parent.Height
