--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1105,7 +1105,7 @@ EstimateScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-    PopopContracterrorNextSS_3 As groupContainer.manualLayoutContainer:
+    PopopErrorES As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Visible: =VarNotification
